[gd_scene load_steps=5 format=3 uid="uid://8gh48mvosmg0"]

[ext_resource type="Script" path="res://Menu/MenuSkirmish/MenuSkirmishNewGame/MenuSkirmishNewGame.gd" id="1"]
[ext_resource type="Font" path="res://Menu/Menu/MenuEntries.tres" id="3"]
[ext_resource type="PackedScene" uid="uid://dvf7qw24kwass" path="res://Menu/Menu/SubmenuTitle.tscn" id="4"]
[ext_resource type="Script" path="res://Menu/MenuBenchmark/BackToMenu.gd" id="5"]

[node name="MenuSkirmishNewGame" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( "1" )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="."]
anchor_left = 0.05
anchor_top = 0.25
anchor_right = 0.95
anchor_bottom = 0.75
script = null
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="ColorRect" parent="Control"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.211765, 0.211765, 0.211765, 1)
script = null
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Margin" type="MarginContainer" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10
script = null
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBox" type="HBoxContainer" parent="Control/Margin"]
size_flags_horizontal = 3
size_flags_vertical = 3
script = null

[node name="VBox" type="VBoxContainer" parent="Control/Margin/HBox"]
size_flags_horizontal = 3
size_flags_vertical = 3
script = null
__meta__ = {
"_edit_use_anchors_": true
}

[node name="MapWidth" type="HBoxContainer" parent="Control/Margin/HBox/VBox"]
script = null

[node name="Label" type="Label" parent="Control/Margin/HBox/VBox/MapWidth"]
text = "Map Width (3-50)"
structured_text_bidi_override_options = []
script = null

[node name="SpinBox" type="SpinBox" parent="Control/Margin/HBox/VBox/MapWidth"]
min_value = 3.0
max_value = 50.0
value = 3.0
script = null

[node name="MapHeight" type="HBoxContainer" parent="Control/Margin/HBox/VBox"]
script = null

[node name="Label" type="Label" parent="Control/Margin/HBox/VBox/MapHeight"]
text = "Map Height (3-50)"
structured_text_bidi_override_options = []
script = null

[node name="SpinBox" type="SpinBox" parent="Control/Margin/HBox/VBox/MapHeight"]
min_value = 3.0
max_value = 50.0
value = 3.0
script = null

[node name="RandomEvents" type="HBoxContainer" parent="Control/Margin/HBox/VBox"]
visible = false
script = null

[node name="Label" type="Label" parent="Control/Margin/HBox/VBox/RandomEvents"]
text = "Random Events"
structured_text_bidi_override_options = []
script = null

[node name="SpinBox" type="SpinBox" parent="Control/Margin/HBox/VBox/RandomEvents"]
max_value = 10.0
script = null

[node name="ComputerLands" type="HBoxContainer" parent="Control/Margin/HBox/VBox"]
visible = false
script = null

[node name="Label" type="Label" parent="Control/Margin/HBox/VBox/ComputerLands"]
text = "Computer Lands at Start"
structured_text_bidi_override_options = []
script = null

[node name="SpinBox" type="SpinBox" parent="Control/Margin/HBox/VBox/ComputerLands"]
max_value = 10.0
script = null

[node name="PlayerLands" type="HBoxContainer" parent="Control/Margin/HBox/VBox"]
visible = false
script = null

[node name="Label" type="Label" parent="Control/Margin/HBox/VBox/PlayerLands"]
text = "Player Lands at Start"
structured_text_bidi_override_options = []
script = null

[node name="SpinBox" type="SpinBox" parent="Control/Margin/HBox/VBox/PlayerLands"]
max_value = 10.0
script = null

[node name="CPUPlayers" type="HBoxContainer" parent="Control/Margin/HBox/VBox"]
script = null

[node name="Label" type="Label" parent="Control/Margin/HBox/VBox/CPUPlayers"]
text = "CPU Players (1-3)"
structured_text_bidi_override_options = []
script = null

[node name="SpinBox" type="SpinBox" parent="Control/Margin/HBox/VBox/CPUPlayers"]
min_value = 1.0
max_value = 3.0
value = 1.0
script = null

[node name="PlayerName" type="HBoxContainer" parent="Control/Margin/HBox/VBox"]
visible = false
script = null

[node name="Label" type="Label" parent="Control/Margin/HBox/VBox/PlayerName"]
text = "Player Name"
structured_text_bidi_override_options = []
script = null

[node name="LineEdit" type="LineEdit" parent="Control/Margin/HBox/VBox/PlayerName"]
rect_min_size = Vector2(120, 0)
max_length = 20
structured_text_bidi_override_options = []
caret_blink = true
caret_blink_speed = 0.5
script = null

[node name="GenerateMapRandomly" type="HBoxContainer" parent="Control/Margin/HBox/VBox"]
script = null

[node name="Label" type="Label" parent="Control/Margin/HBox/VBox/GenerateMapRandomly"]
text = "Generate random populated map"
structured_text_bidi_override_options = []
script = null

[node name="GenerateRandomMap" type="CheckButton" parent="Control/Margin/HBox/VBox/GenerateMapRandomly"]
script = null

[node name="ChanceOfTerrain2" type="HBoxContainer" parent="Control/Margin/HBox/VBox"]
script = null

[node name="Label" type="Label" parent="Control/Margin/HBox/VBox/ChanceOfTerrain2"]
text = "Chance of Terrain (1-5)"
structured_text_bidi_override_options = []
script = null

[node name="TerrainChanceSpinBox" type="SpinBox" parent="Control/Margin/HBox/VBox/ChanceOfTerrain2"]
min_value = 1.0
max_value = 5.0
value = 4.0
script = null

[node name="TextureRect" type="TextureRect" parent="Control/Margin/HBox"]
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 1.72
expand = true
stretch_mode = 6
script = null

[node name="Buttons" type="HBoxContainer" parent="."]
anchor_left = 0.05
anchor_top = 0.781
anchor_right = 0.95
anchor_bottom = 0.9
script = null
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartSkirmish" type="Button" parent="Buttons"]
rect_min_size = Vector2(180, 0)
custom_fonts/font = ExtResource( "3" )
disabled = true
text = "Start skirmish"
script = null

[node name="Generate Map" type="Button" parent="Buttons"]
rect_min_size = Vector2(180, 0)
custom_fonts/font = ExtResource( "3" )
text = "Generate MAP"
script = null

[node name="Label" type="Label" parent="Buttons"]
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 1000.0
structured_text_bidi_override_options = []
script = null

[node name="BackToMenu" type="Button" parent="Buttons"]
rect_min_size = Vector2(180, 0)
custom_fonts/font = ExtResource( "3" )
text = "Back to menu"
script = ExtResource( "5" )

[node name="Skirmish" parent="." instance=ExtResource( "4" )]
text = "Skirmish"
structured_text_bidi_override_options = []
script = null

[connection signal="button_up" from="Buttons/StartSkirmish" to="." method="_on_StartSkirmish_button_up"]
[connection signal="button_up" from="Buttons/Generate Map" to="." method="_on_Generate_Map_button_up"]
[connection signal="pressed" from="Buttons/BackToMenu" to="Buttons/BackToMenu" method="_on_BackToMenu_pressed"]
